# ts_tool

./: .gitignore  CMakeLists.txt  QtLingo.pro  QtLingo.qrc  README.md  efl_hash.h  main.cpp  ts_model.cpp  ts_model.h  ts_tool.pro
android/: AndroidManifest.xml
config/: config.xml
desktop/: CMakeLists.txt  QtAppVeyor.desktop
help/: About-Author-en.html  About-en.html  Help-en.html  ReadMe.md
ios/: Info.plist
scripts/: build_script.cmd  build_script.ps1  build_script.sh  install.cmd  install.ps1  install.sh
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyConstants.h  MyDatatables.cpp  MyDatatables.h  MyOrgSettings.cpp  MyOrgSettings.h  MySimpleCrypt.cpp  MySimpleCrypt.h  MySqlDbtModel.cpp  MySqlDbtModel.h  MyTranslationFiles.cpp  MyTranslationFiles.h  main.cpp
src/test/QtLingo/: QtLingo.pro  tst_qtlingo.cpp
src/test/build-QtLingo-Desktop-Debug/: Makefile  QtLingo  tst_qtlingo.moc
translations/: QtLingo_ar.qm  QtLingo_ar.ts  QtLingo_de.qm  QtLingo_de.ts  QtLingo_en.qm  QtLingo_en.ts  QtLingo_fr.qm  QtLingo_fr.ts  QtLingo_it.qm  QtLingo_it.ts  QtLingo_ja.qm  QtLingo_ja.ts  QtLingo_ko.ts  QtLingo_no.qm  QtLingo_no.ts  QtLingo_ru.qm  QtLingo_ru.ts  QtLingo_sv.qm  QtLingo_sv.ts  QtLingo_zh-CN.qm  QtLingo_zh-CN.ts
translations_new/: QtLingo_zh-CN.ts  QtLingo_zh-CN.txt
translations_temp/: QtLingo_en.ts  QtLingo_en.txt  messageLog.txt
translations_temp/Source/: QtLingo_ar.ts  QtLingo_de.ts  QtLingo_en.ts  QtLingo_fr.ts  QtLingo_it.ts  QtLingo_ja.ts  QtLingo_ko.ts  QtLingo_no.ts  QtLingo_ru.ts  QtLingo_sv.ts  QtLingo_zh.ts
usr/share/applications/: QtLingo.desktop
